--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,12 @@ name = "client"
 path = "examples/client.rs"
 
 [dependencies]
-tokio = { version = "1.36", features = ["full"] }
+tokio = { version = "1.0", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"] }
 bytes = "1.5"
 futures = "0.3"
 log = "0.4"
-env_logger = "0.11"
+env_logger = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
@@ -32,4 +32,5 @@ memmap2 = "0.9"
 bincode = "1.3"
 anyhow = "1.0"
 chrono = "0.4"
-uuid = { version = "1.7.0", features = ["v4"] } 
+uuid = { version = "1.7.0", features = ["v4"] }
+serde_yaml = "0.9" 
