--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ path = "examples/client.rs"
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"] }
-bytes = "1.5"
+bytes = "1.0"
 futures = "0.3"
 log = "0.4"
 env_logger = "0.10"
@@ -28,9 +28,10 @@ thiserror = "1.0"
 async-trait = "0.1"
 dashmap = "5.5"
 crossbeam-channel = "0.5"
-memmap2 = "0.9"
+memmap2 = "0.5"
 bincode = "1.3"
 anyhow = "1.0"
 chrono = "0.4"
-uuid = { version = "1.7.0", features = ["v4"] }
-serde_yaml = "0.9" 
+uuid = { version = "1.0", features = ["v4"] }
+serde_yaml = "0.9"
+humantime-serde = "1.1" 
