--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ crossbeam-channel = "0.5"
 memmap2 = "0.5"
 bincode = "1.3"
 anyhow = "1.0"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4"] }
 serde_yaml = "0.9"
 humantime-serde = "1.1" 
