--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,4 @@ chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4"] }
 serde_yaml = "0.9"
 humantime-serde = "1.1" 
+crc = "3.0.0"
