--- a/config/default.yaml
+++ b/config/default.yaml
@@ -7,6 +7,7 @@ server:
 storage:
   data_dir: "data"
   segment_size: 1073741824 # 1GB
+  index_interval_bytes: 4096 # 4KB
   retention_hours: 168
   max_segment_size: 1073741824
   max_segments: 10
