--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,7 @@ uuid = { version = "1.0", features = ["v4"] }
 serde_yaml = "0.9"
 humantime-serde = "1.1" 
 crc = "3.0.0"
+
+[dev-dependencies]
+bifrost-client = {path = "bifrost-client"}
+tempfile = "3.10.1"
