--- a/config/default.yaml
+++ b/config/default.yaml
@@ -15,6 +15,9 @@ log:
   level: "info"
 
 broker:
-  data_dir: "data" # 移动到这里
+  id: 0
+  advertised_host: "127.0.0.1"
+  advertised_port: 9092
+  data_dir: "data" 
   flush_interval_ms: 1000
   cleanup_interval_ms: 5000
