--- a/bifrost-client/Cargo.toml
+++ b/bifrost-client/Cargo.toml
@@ -16,3 +16,5 @@ uuid = { version = "1.7", features = ["v4"] }
 chrono = "0.4"
 tokio-util = { version = "0.7", features = ["codec"] }
 serde = { version = "1.0", features = ["derive"] }
+thiserror = "1.0"
+rand = "0.8"
