--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,9 @@ uuid = { version = "1.0", features = ["v4"] }
 serde_yaml = "0.9"
 humantime-serde = "1.1" 
 crc = "3.0.0"
+crc32fast = "1.3"
+flate2 = "1.0"
+varuint = "0.7.1"
 
 [dev-dependencies]
 bifrost-client = {path = "bifrost-client"}
