feat(storage): revamp storage module
- Refactored the storage module structure for better extensibility and maintainability.
- Updated LogStorage trait and its implementations to support async operations and batch processing.
- Improved partition and topic management to integrate with the new storage API.
- Enhanced error handling and configuration for storage backends.
- Prepared for future features such as offset management and Kafka compatibility.

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -10,6 +10,7 @@ storage:
   index_interval_bytes: 4096 # 4KB
   retention_policy_bytes: 10737418240 # 10GB
   retention_policy_ms: 604800000 # 7 days
+  preallocate: false
 
 log:
   level: "info"
