--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,16 +30,19 @@ dashmap = "5.5"
 crossbeam-channel = "0.5"
 memmap2 = "0.5"
 bincode = "1.3"
-anyhow = "1.0.82"
+anyhow = "1.0.86"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4"] }
-serde_yaml = "0.9"
+serde_yaml = "0.9.34"
 humantime-serde = "1.1" 
 crc = "3.0.0"
 crc32fast = "1.3"
 flate2 = "1.0"
 varuint = "0.7.1"
 bifrost-protocol-macro = { path = "bifrost-protocol-macro" }
+tonic = "0.11.0"
+prost = "0.12.6"
+openraft = "0.9.4"
 
 [dev-dependencies]
 tempfile = "3.10.1"
@@ -48,3 +51,4 @@ tempfile = "3.10.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 heck = "0.4"
+tonic-build = "0.11.0"
