--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,6 @@ edition = "2021"
 name = "aeon"
 path = "src/lib.rs"
 
-[[example]]
-name = "consumer"
-path = "examples/consumer.rs"
-
-[[example]]
-name = "client"
-path = "examples/client.rs"
-
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"] }
@@ -42,7 +34,10 @@ varuint = "0.7.1"
 aeon-protocol-macro = { path = "aeon-protocol-macro" }
 
 [dev-dependencies]
+rdkafka = { version = "0.38.0", features = ["dynamic_linking"] }
 tempfile = "3.10.1"
+anyhow = "1.0.86"
+tokio = { version = "1", features = ["full"] }
 
 [build-dependencies]
 serde = { version = "1.0", features = ["derive"] }
